edited background colours, changed styling for desktop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Weather App</title>
+    <title>World Wide Weather</title>
 
     <!--CSS Style Link-->
     <link rel="stylesheet" href="css/styles.css">
@@ -13,7 +13,6 @@
     
    <div class="app-wrapper">
        <div class="container">
-
            <!--Search Box-->
            <div class="city-search">
                <input type="text" class="search-box" autocomplete="off" placeholder="Enter your city name...">
@@ -33,9 +32,9 @@
 
            <!--Extra Weather Info-->
            <div class="extra-info">
-               <div class="wind-speed"><img src="img/SVG/wind.svg" alt=""> <span></span></div>
-               <div class="humidity"><img src="img/SVG/wet.svg" alt="">   <span></span></div>
-               <div class="feels-like"><img src="img/SVG/thermometer-75.svg" alt=""> <span></span></div>
+               <div class="wind-speed"><p>Wind Speed</p><span></span></div>
+               <div class="humidity"><p>Humidity</p> <span></span></div>
+               <div class="feels-like"><p>Feels Like</p> <span></span></div>
            </div>
        </div>
    </div>
