cleaned up code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                <div class="weather-icon"><img src="" alt="" class="weather-img"></div>
 
                <div class="temperature"></div>
+               <div class="weather-description"></div>
 
                <div class="min-max"></div>
 
