layout complete, main javascript completed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 The search will return the temperature and weather description, as well as other information such as humidity and wind speed.
             </p> -->
             <input type="text" placeholder="Enter city name..." autocomplete="off" class="search-box">
+            <input type="submit" class="submit">
             <div class="date"></div>
         </header>
 
@@ -31,9 +32,9 @@
 
         <!--Extra Weather Information-->
         <div class="extra-weather-info">
-            <div class="wind-speed"><p> </p> <span></span></div>
-            <div class="humidity"><p></p> <span></span></div>
-            <div class="feels-like"><p> </p> <span></span></div>
+            <div class="wind-speed"><p>wind speed</p> <span></span></div>
+            <div class="humidity"><p>humidity</p> <span></span></div>
+            <div class="feels-like"><p>feels like</p> <span></span></div>
         </div>
     </div>
    
