--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <!--Celcius / Farehnnhiet Switch-->
-        <div class="btn">°c</div>
+        <div class="btn">°C</div>
         
         <header>
             <!--App Description-->
