added animations to weather icons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <!--Search Box-->
-            <input type="text" placeholder="Enter city name..." autocomplete="off" class="search-box">
+            <input type="search" placeholder="Enter city name..." autocomplete="off" class="search-box">
             <input type="submit" class="submit" value="Go">
 
             <!--Date-->
@@ -47,6 +47,8 @@
             <div class="humidity"><p>humidity</p> <span></span></div>
             <div class="feels-like"><p>feels like</p> <span></span></div>
         </div>
+
+        <!-- <div class="test"></div> -->
     </div>
    
 
