added five day forecast

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container main">
         <!--Celcius / Farehnnhiet Switch-->
         <!-- <div class="btn">°C</div> -->
         
@@ -19,8 +19,8 @@
             <div class="app-description">
                 <h2>world wide weather</h2>
                 <p>
-                    Search for the weather in any city across the world.
-                    The search will return the temperature and weather description, as well as other information such as humidity and wind speed.
+                    Search for the daily weather in any city across the world.
+                    Try typing below, for example, 'Dumfries, GB'
                 </p>
             </div>
 
@@ -48,6 +48,18 @@
         </div>
 
         <!-- <div class="test"></div> -->
+    </div>
+
+    <div class="five-day-container">
+        <!--5 Day Forecast-->
+        <div class="five-day-forecast">
+            <ul>
+                <li>monday <span>14</span></li>
+                <li>tuesday <span>10</span></li>
+                <li>wednesday <span>12</span></li>
+                <li>thursday <span>15</span></li>
+            </ul>
+        </div>
     </div>
    
 
