added current location button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
             <!--Search Box-->
             <input type="search" placeholder="Enter city name..." autocomplete="off" class="search-box">
+            <br> <br>
+            <!--Current Location Button-->
+            <input class="current-btn" type="button" value="Current Location">
 
             <!--Date-->
             <div class="date"></div>
