--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="search" placeholder="Enter city name..." autocomplete="off" class="search-box">
             <br> <br>
             <!--Current Location Button-->
-            <input class="current-btn" type="button" value="Current Location">
+            <div class="current-btn">current location</div>
 
             <!--Date-->
             <div class="date"></div>
