changed button icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>World Wide Weather</title>
 
+    <!--Font Awesome Link-->
+    <script src="https://kit.fontawesome.com/fa75f3429d.js" crossorigin="anonymous"></script>
+
     <!--CSS Style Link-->
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -28,7 +31,7 @@
             <input type="search" placeholder="Enter city name..." autocomplete="off" class="search-box">
             <br> <br>
             <!--Current Location Button-->
-            <div class="current-btn">current location</div>
+            <div class="current-btn"><i class="fas fa-map-marker-alt"></i></div>
 
             <!--Date-->
             <div class="date"></div>
