cleaned up css code

--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
 </head>
 <body>
     <div class="container main">
-        <!--Celcius / Farehnnhiet Switch-->
-        <!-- <div class="btn">°C</div> -->
-        
         <header>
             <!--App Description-->
             <div class="app-description">
                 <h2>world wide weather</h2>
                 <p>
-                    Search for the daily weather in any city across the world.
-                    Try typing below, for example, 'Dumfries, GB'
+                    Search for the weather in any city across the world.
+                    If your city does not appear, try typing the country abbreviation. For example: 'Glasgow, GB'
                 </p>
             </div>
 
             <!--Search Box-->
             <input type="search" placeholder="Enter city name..." autocomplete="off" class="search-box">
-            <br> <br>
+            
             <!--Current Location Button-->
             <div class="current-btn"><i class="fas fa-map-marker-alt"></i></div>
 
@@ -53,22 +50,7 @@
             <div class="feels-like"><p>feels like</p> <span></span></div>
         </div>
 
-        <!-- <div class="test"></div> -->
     </div>
-
-    <div class="five-day-container">
-        <!--5 Day Forecast-->
-        <div class="five-day-forecast">
-            <ul>
-                <li>monday <span>14</span></li>
-                <li>tuesday <span>10</span></li>
-                <li>wednesday <span>12</span></li>
-                <li>thursday <span>15</span></li>
-            </ul>
-        </div>
-    </div>
-   
-
     <!--JavaScript Link-->
     <script src="js/main.js"></script>
 </body>
