added loading bar animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container main">
+    <div class="container">
         <header>
             <!--App Description-->
             <div class="app-description">
@@ -49,8 +49,17 @@
             <div class="humidity"><p>humidity</p> <span></span></div>
             <div class="feels-like"><p>feels like</p> <span></span></div>
         </div>
-
     </div>
+
+     <!--Loading Animation-->
+     <div class="load-container">
+        <div class="load">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+    </div>
+    
     <!--JavaScript Link-->
     <script src="js/main.js"></script>
 </body>
