--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>World Wide Weather</title>
+    <title>Worldwide Weather</title>
 
     <!--Font Awesome Link-->
     <script src="https://kit.fontawesome.com/fa75f3429d.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
         <header>
             <!--App Description-->
             <div class="app-description">
-                <h2>world wide weather</h2>
+                <h2>worldwide weather</h2>
                 <p>
                     Search for the weather in any city across the world.
                     If your city does not appear, try typing the country abbreviation. For example: 'Glasgow, GB'
